# aflux-cli

./: .env.example  .gitignore  AGENTS.md  FILETREE.md  Makefile  README.md  pyproject.toml
aflux/: .gitignore  __init__.py  cache.py  cli.py  core.py  hot_sectors.py  market.py  models.py  output.py  pull_daily_stock_quotes.py  refresh_stock_basic.py  scanner.py  server.py  settings.py  vol_boom.py  volume_price.py
aflux/datasource/: __init__.py  akshare_src.py  eastmoney_src.py
db_schema/: daily_stock_quotes.sql  stock_info.sql
docs/: Volume–Price Relationship CLI Analyzer.md  architecture.md  volume–price-relationship.md  web-app-plan.md
examples/: volume_price_sample.csv
tests/: test_volume_price.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/scan/: +page.svelte
web/static/: manifest.json  service-worker.js
