[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aflux-cli"
version = "0.1.0"
description = "Real-time Python CLI and HTTP scanner for China A-share abnormal turnover and price momentum."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "aflux-cli contributors" }
]
dependencies = [
  "akshare>=1.14,<2",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "pydantic>=2",
  "pydantic-settings>=2.2,<3",
  "PyJWT>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.7,<14",
  "slowapi>=0.1.9,<1",
  "typer[all]>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
aflux = "aflux.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aflux"]

[tool.hatch.build.targets.sdist]
include = [
  "/aflux",
  "/db_schema",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
